[gd_scene load_steps=4 format=3 uid="uid://cigtk5g6075bn"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_dpxy8"]

[sub_resource type="Gradient" id="Gradient_x3103"]
colors = PackedColorArray(0, 0.192157, 0, 1, 0.839216, 0.631373, 0.698039, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_owtjs"]
gradient = SubResource("Gradient_x3103")
fill_from = Vector2(0.279817, 0.899083)
fill_to = Vector2(0.545872, 0)

[node name="MainMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_owtjs")
script = ExtResource("1_dpxy8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -85.5
offset_right = 59.5
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "World"
horizontal_alignment = 1

[node name="FindButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Find Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="SandboxButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sandbox"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../FindButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/FindButton" to="." method="_on_find_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SandboxButton" to="." method="_on_sandbox_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
